--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assigment-12-server",
+  "name": "laptop-store-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
