--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.1",
+    "nodemon": "^2.0.20",
     "stripe": "^10.11.0"
   }
 }
